five sections completed

--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
 /* ==============================
    HEADER CONTAINER
 ================================ */
@@ -466,7 +471,7 @@
   margin-top: 2141px;
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
-
+ overflow: hidden;
   background-image: url('./assets/images/studio.svg');
   background-size: cover;
   background-position: center;
@@ -504,16 +509,15 @@
 
 .mkp-two-column-section {
   position: relative;
-  width: 100%;               /* use full available width */
-  max-width: 1440px;         /* limit max width */
-  margin: 62px auto 0 auto;  /* top spacing, center horizontally */
+  width: 100%;
+  max-width: 1440px;
+  margin: 62px auto 0 auto; /* centers horizontally */
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* 2 columns take equal space */
-  column-gap: 24px;          /* space between columns */
-  overflow: hidden;          /* prevent extra scroll */
-  box-sizing: border-box;    /* include padding in width */
-  padding: 0 16px;           /* small horizontal padding */
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 24px;
+  box-sizing: border-box;
 }
+
 
 /* Column common */
 .mkp-column {
@@ -682,3 +686,95 @@
   }
 }
 
+
+/* ==============================
+   GEAR INFO SECTION (PC)
+============================== */
+
+.mkp-gear-section {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  margin-top: 122px; /* adjust if needed */
+  
+}
+
+/* GRID */
+.mkp-gear-grid {
+  display: grid;
+  grid-template-columns: 641px 645px;
+  column-gap: 24px;
+  align-items: start;
+}
+
+/* ==============================
+   LEFT COLUMN
+============================== */
+
+.mkp-gear-left {
+  width: 641px;
+  height: 651px;
+  opacity: 1;
+}
+
+.mkp-gear-left-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+/* ==============================
+   RIGHT COLUMN
+============================== */
+
+.mkp-gear-right {
+  width: 645px;
+  height: 614px;
+  display: flex;
+  flex-direction: column;
+  opacity: 1;
+}
+
+/* TITLE */
+.mkp-gear-title {
+  width: 644px;
+  height: 96px;
+
+  font-family: 'Lay Grotesk - Trial', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 40px;
+  line-height: 119%;
+  letter-spacing: 2%;
+  vertical-align: middle;
+
+  margin: 0 0 34px 0;
+  opacity: 1;
+}
+
+/* PARAGRAPH */
+.mkp-gear-text {
+  width: 644px;
+  height: 252px;
+
+  font-family: 'Lay Grotesk - Trial', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
+  line-height: 131%;
+  letter-spacing: 4%;
+  vertical-align: middle;
+
+  margin: 0 0 24px 0;
+  opacity: 1;
+}
+
+/* BOTTOM IMAGE */
+.mkp-gear-bottom-image {
+  width: 645px;
+  height: 208px;
+  object-fit: cover;
+  display: block;
+  opacity: 1;
+}
